force-app/main/default/objects/Subscription__c/fields/Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Base_Product__c</fullName>
    <formula>Subscription_Fulfillment__r.Base_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Product</label>
    <type>Text</type>
</CustomField>