force-app/main/default/objects/Subscription__c/fields/Cancelled_for_Non_Payment__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_for_Non_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if there is a non payment</description>
    <label>Cancelled for Non-Payment</label>
    <type>Checkbox</type>
</CustomField>