force-app/main/default/objects/Subscription__c/fields/Create_Next_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Create_Next_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field for automating creation of next period&apos;s subscription order.</description>
    <label>Create Next Subscription</label>
    <type>Checkbox</type>
</CustomField>