force-app/main/default/objects/Subscription__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This date is set when a desired end date is needed for the subscription</description>
    <inlineHelpText>This date is set when a desired end date is needed for the subscription</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>