force-app/main/default/objects/Subscription__c/fields/Magazine_Type__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Type__c</fullName>
    <formula>TEXT(Renewal_Product__r.Magazine_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magazine Type</label>
    <type>Text</type>
</CustomField>