force-app/main/default/objects/Subscription__c/fields/Original_Subscription_Boom_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Subscription_Boom_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field displays the original order that was released with the new subscription</description>
    <inlineHelpText>This field displays the original order that was released with the new subscription</inlineHelpText>
    <label>Original Subscription Boom Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>