force-app/main/default/objects/Subscription__c/fields/Override_Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Override_Default_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Default Payment Method</label>
    <type>Checkbox</type>
</CustomField>