force-app/main/default/objects/Subscription__c/fields/Pause_Date__c.field-meta.xml
<CustomField>
    <fullName>Pause_Date__c</fullName>
    <label>Date Paused</label>
    <type>Date</type>
</CustomField>