force-app/main/default/objects/Subscription__c/fields/Re_start_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_start_Date__c</fullName>
    <description>When a subscription is status = paused, it will automatically go back to Active on the Re-start Date.</description>
    <inlineHelpText>When a subscription is status = paused, it will automatically go back to Active on the Re-start Date.</inlineHelpText>
    <label>Re-start Date</label>
    <type>Date</type>
</CustomField>