force-app/main/default/objects/Subscription__c/fields/Renewal_Date_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_Day_of_Month__c</fullName>
    <label>Renewal Date (Day of Month)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>