force-app/main/default/objects/Subscription__c/fields/Renewal_Price__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Price__c</fullName>
    <inlineHelpText>Renewal Price Per Qty</inlineHelpText>
    <label>Renewal Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>