force-app/main/default/objects/Subscription__c/fields/Renewal_Product__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the product that should be renewed at time of next renewal</description>
    <inlineHelpText>This is the product that should be renewed at time of next renewal</inlineHelpText>
    <label>Renewal Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>