force-app/main/default/objects/Subscription__c/fields/Renewal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quantity__c</fullName>
    <label>Renewal Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>