force-app/main/default/objects/Subscription__c/fields/Subscription_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is related to the primary subscription fulfillment used by Production</description>
    <inlineHelpText>This field is related to the primary subscription fulfillment used by Production</inlineHelpText>
    <label>Subscription Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>