force-app/main/default/objects/Subscription__c/listViews/Active_Subscriptions.listView-meta.xml
<ListView>
    <fullName>Active_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Original_Subscription_Boom_Order__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Subscription_Fulfillment__c</columns>
    <columns>Contact__c</columns>
    <columns>Renewal_Date_Day_of_Month__c</columns>
    <columns>Renewal_Quantity__c</columns>
    <columns>Renewal_Price__c</columns>
    <columns>Renewal_Product__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Status__c</columns>
    <columns>Pause_Date__c</columns>
    <columns>Re_start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>Active Subscriptions</label>
</ListView>