force-app/main/default/objects/Subscription__c/listViews/Add_On_Subscriptions_EMag.listView-meta.xml
<ListView>
    <fullName>Add_On_Subscriptions_EMag</fullName>
    <columns>NAME</columns>
    <columns>Original_Subscription_Boom_Order__c</columns>
    <columns>Base_Product__c</columns>
    <columns>Contact__c</columns>
    <columns>Parent_Subscription__c</columns>
    <columns>Renewal_Product__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Subscription_Fulfillment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Subscription__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Base_Product__c</field>
        <operation>equals</operation>
        <value>E-Magazine</value>
    </filters>
    <label>Add On Subscriptions E-Mag</label>
</ListView>