force-app/main/default/objects/Subscription__c/listViews/Add_On_Subscriptions_today.listView-meta.xml
<ListView>
    <fullName>Add_On_Subscriptions_today</fullName>
    <columns>NAME</columns>
    <columns>Original_Subscription_Boom_Order__c</columns>
    <columns>Parent_Subscription__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Subscription_Fulfillment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Subscription__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Add On Subscriptions Today</label>
</ListView>