force-app/main/default/objects/Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Subscription__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>