force-app/main/default/objects/Subscription__c/listViews/All_Subscriptions.listView-meta.xml
<ListView>
    <fullName>All_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Original_Subscription_Boom_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_Fulfillment__c</columns>
    <columns>Contact__c</columns>
    <columns>Renewal_Frequency__c</columns>
    <columns>Renewal_Price__c</columns>
    <columns>Renewal_Product__c</columns>
    <columns>Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Subscriptions</label>
</ListView>