force-app/main/default/objects/Subscription__c/listViews/Cancelled_Subscriptions_All.listView-meta.xml
<ListView>
    <fullName>Cancelled_Subscriptions_All</fullName>
    <columns>NAME</columns>
    <columns>Cancelled_Date__c</columns>
    <columns>Finance_Notes__c</columns>
    <columns>Cancelled_for_Non_Payment__c</columns>
    <columns>Original_Subscription_Boom_Order__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Subscription_Fulfillment__c</columns>
    <columns>Contact__c</columns>
    <columns>Renewal_Quantity__c</columns>
    <columns>Renewal_Price__c</columns>
    <columns>Renewal_Product__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Subscriptions - All</label>
    <language>en_US</language>
</ListView>