force-app/main/default/objects/Subscription__c/listViews/Discount_Subscriptions.listView-meta.xml
<ListView>
    <fullName>Discount_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Original_Subscription_Boom_Order__c</columns>
    <columns>Base_Product__c</columns>
    <columns>Contact__c</columns>
    <columns>Parent_Subscription__c</columns>
    <columns>Renewal_Product__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Subscription_Fulfillment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>DISC</value>
    </filters>
    <label>Discount Subscriptions</label>
    <language>en_US</language>
</ListView>