force-app/main/default/objects/Subscription__c/listViews/ELM_Subscriptions_Today_Automated.listView-meta.xml
<ListView>
    <fullName>ELM_Subscriptions_Today_Automated</fullName>
    <columns>NAME</columns>
    <columns>Original_Subscription_Boom_Order__c</columns>
    <columns>Parent_Subscription__c</columns>
    <columns>Subscription_Fulfillment__c</columns>
    <columns>Renewal_Product__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Renewal_Date_Day_of_Month__c</columns>
    <columns>Renewal_Quantity__c</columns>
    <columns>Renewal_Price__c</columns>
    <columns>Status__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ADDON</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/18/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>MK</value>
    </filters>
    <label>ELM Subscriptions Data Load 4/18</label>
    <sharedTo>
        <group>Shelly_Martin</group>
    </sharedTo>
</ListView>